--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,3 +7,6 @@
   width: 90%;
   margin: 15px auto;
 }
+body{
+  font-family:"Microsoft YaHei", source-code-pro,Menlo,Monaco,Consolas,Courier New,monospace
+}
